test/liftedConsuming7.slq
// args: --run

def main(){
	x:=H(1);
	y:=dup(x);
	forget(X(y)=X(x)); /// error
}
